@@ -8,7 +8,6 @@
 import re, urllib, htmlentitydefs, codecs
 from StringIO import StringIO
 from mako import util
-import markupsafe
 
 xml_escapes = {
     '&' : '&amp;',
@@ -21,13 +20,18 @@ xml_escapes = {
 # XXX: &quot; is valid in HTML and XML
 #      &apos; is not valid HTML, but is valid XML
 
-def html_escape(string):
-    return markupsafe.escape(string)
-
 def legacy_html_escape(string):
     """legacy HTML escape for non-unicode mode."""
 
     return re.sub(r'([&<"\'>])', lambda m: xml_escapes[m.group()], string)
+
+try:
+    import markupsafe
+    def html_escape(string):
+        return markupsafe.escape(string)
+except ImportError:
+    html_escape = legacy_html_escape
+
     
 def xml_escape(string):
     return re.sub(r'([&<"\'>])', lambda m: xml_escapes[m.group()], string)
